[package]
name = "bee-tsa"
version = "0.1.0-alpha"
authors = ["IOTA Stiftung"]
edition = "2018"
description = ""
readme = "README.md"
repository = "https://github.com/iotaledger/bee"
license = "Apache-2.0"
keywords = ["iota", "tangle", "bee", "framework", "tsa"]
homepage = "https://www.iota.org"

[dependencies]
bee-crypto = { git = "https://github.com/iotaledger/bee.git" }
bee-protocol = { path = "../bee-protocol" }
bee-tangle = { path = "../bee-tangle" }
bee-transaction = { path = "../bee-transaction" }

dashmap = "3.11"